# LibAKC-

./: CMakeLists.txt  MLMain.cpp  README.md  main.cpp  mnist.cpp  mnist.h  testing.cpp
include/: GraphicsBuffer.h  Renderer.h
logs/: machine learning 1.txt
oldstuff/: HMatrix.h  HVector.h  Matrix.h  Tensor.hpp  Vector.h  byte_operations.hpp  main.cpp
oldstuff/machinelearning/: FCNeuralNetwork.h  FCNeuralNetworkTrainer.h  TensorMath.h
src/: Array.cpp  Array.h  DrawingPane.cpp  GraphicsBuffer.cpp  GridPane.cpp  Renderer.cpp  Window.cpp
src/graphics/: GraphicsBuffer.cpp  GraphicsBuffer.h  Image.cpp  Image.h  ImagePane.cpp  ImagePane.h  Pane.cpp  Pane.h  Shader.cpp  Shader.h  Window.cpp
src/machinelearning/: Layer.cpp  Layer.h  LayeredNeuralNetwork.cpp  LayeredNeuralNetwork.h  NeuralNetwork.h  Node.cpp  Node.h  Util.h
